<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 Chen Mouxiang <cmx_1007@foxmail.com>
  ~ All Rights Reserved.
  -->

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
                name="model"
                type="indi.key.myapplication.MainActivityViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.054"
                android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_one"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                android:id="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginTop="16dp"/>

        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:id="@+id/radioGroup"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                >

            <RadioButton
                    android:text="@string/c"
                    android:onClickListener="@{() ->  model.getOnLanguageClick().invoke(0)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <RadioButton
                    android:text="@string/java"
                    android:onClickListener="@{() ->  model.getOnLanguageClick().invoke(1)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <RadioButton
                    android:text="@string/python"
                    android:onClickListener="@{() ->  model.getOnLanguageClick().invoke(2)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <RadioButton
                    android:text="@string/kotlin"
                    android:onClickListener="@{() ->  model.getOnLanguageClick().invoke(3)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <RadioButton
                    android:text="@string/php"
                    android:onClickListener="@{() ->  model.getOnLanguageClick().invoke(4)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </RadioGroup>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_two"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                android:id="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>

        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:id="@+id/checkboxGroup">

            <RadioButton
                    android:text="@string/android"
                    android:onClickListener="@{() ->  model.getOnOSClick().invoke(0)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <RadioButton
                    android:text="@string/ios"
                    android:onClickListener="@{() ->  model.getOnOSClick().invoke(1)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </RadioGroup>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/enter_your_name"
                android:id="@+id/editText"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/checkboxGroup"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                tools:ignore="Autofill"/>

        <Button
                android:text="@string/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:id="@+id/button"
                android:onClickListener="@{() ->  model.getOnButtonClickListener().invoke()}"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintEnd_toEndOf="@+id/editText"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/editText"/>

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:visibility="@{model.isSubmitting ? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="@+id/button"
                app:layout_constraintEnd_toEndOf="@+id/button"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/button"/>


    </android.support.constraint.ConstraintLayout>
</layout>